--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -44,6 +44,18 @@
         $("#btn_guardar").disabled = false;
     }
 
+    function CrearModificarCliente() {
+        var location = GetPathServer();
+        if(IdCliente.GetValue() > 0)
+        {
+            var win = window.open(location + "/Facturacion/Cliente/Modificar?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdCliente=" + IdCliente.GetValue(), '_blank');
+            win.focus();
+        }else
+        {
+            var win = window.open(location + "/Facturacion/Cliente/Nuevo?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa, '_blank');
+            win.focus();
+        }
+    }
 </script>
 @model Core.Erp.Info.Facturacion.fa_guia_remision_Info
 @{
@@ -112,9 +124,17 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdCliente"></label>
-                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Cliente",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
+                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarCliente();">
+                        <i class="fa fa-external-link-square"></i>
+                    </button>
                 </div>
             </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="DatosCliente">Información adicional</label>
+                    <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
+                </div>
+            </div> 
             <div class="col-md-3" id="datos_punto_venta1">
                 <div class="form-group">
                     <label for="vt_serie1">Establecimiento*</label>
@@ -243,7 +263,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.gi_Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -269,6 +289,7 @@
             </div>
         </div>
     </div>
+    <br/>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -317,6 +338,8 @@
 <script>
     $(function () {
         CargarPuntosDeVenta();
+        cargar_contactos();
+
         $("#IdSucursal").change(function () {
             CargarPuntosDeVenta();
         });
@@ -396,6 +419,33 @@
             }
         });
     };
+
+    function cargar_contactos() {
+        var codigo = IdCliente.GetValue();
+
+        if (codigo > 0) 
+        {
+            var datos = {
+                IdCliente: codigo
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("cargar_contactos", "GuiaRemision",new { Area = "Facturacion"})',
+                async: false,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#DatosCliente").val(data);
+                },
+                error: function (error) {
+                }
+            });
+        }
+        else{
+            $("#DatosCliente").val("");
+        }
+    }
 </script>
 
 
