--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Modificar.cshtml
@@ -46,6 +46,18 @@
         $("#btn_guardar").disabled = false;
     }
 
+    function CrearModificarCliente() {
+        var location = GetPathServer();
+        if(IdCliente.GetValue() > 0)
+        {
+            var win = window.open(location + "/Facturacion/Cliente/Modificar?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdCliente=" + IdCliente.GetValue(), '_blank');
+            win.focus();
+        }else
+        {
+            var win = window.open(location + "/Facturacion/Cliente/Nuevo?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa, '_blank');
+            win.focus();
+        }
+    }
 </script>
 @model Core.Erp.Info.Facturacion.fa_guia_remision_Info
 @{
@@ -141,9 +153,17 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="IdCliente"></label>
-                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Cliente",new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
+                    <button type="button" class="btn btn-primary form-control " onclick="CrearModificarCliente();">
+                        <i class="fa fa-external-link-square"></i>
+                    </button>
                 </div>
             </div>
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="DatosCliente">Información adicional</label>
+                    <input class="form-control" type="text" id="DatosCliente" value="" readonly="readonly" />
+                </div>
+            </div> 
             <div class="col-md-3" id="datos_punto_venta1">
                 <div class="form-group">
                     <label for="vt_serie1">Establecimiento*</label>
@@ -285,7 +305,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="pf_observacion">Observación</label>
-                    @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.gi_Observacion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -310,13 +330,16 @@
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="detalle_guia">
-                <div class="col-md-12">
+                <div class="row">
                     <div class="col-md-12">
-                        <button type="button" class="btn btn-primary" onclick="MostrarModal()">
-                            <i class="fa fa-search"></i>
-                        </button>
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-primary" onclick="MostrarModal()" title="Buscar facturas si guia">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </div>
                     </div>
                 </div>
+                <br />
                 <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
@@ -326,7 +349,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_documentos_relacionados">
                 <div class="row">
@@ -446,6 +468,7 @@
         GetUltimoDocumento_Factura();
         get_direccion();
         get_placa();
+        cargar_contactos()
 
         $("#IdSucursal").change(function () {
             CargarPuntosDeVenta();
@@ -562,32 +585,6 @@
         });
     }
 
-
-    function cargar_contactos() {
-
-        $("#IdContacto").empty();
-        var codigo = IdCliente.GetValue();
-
-        var datos = {
-            IdCliente: codigo
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("cargar_contactos", "Factura",new { Area = "Facturacion"})',
-            async: false,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $.each(data, function (i, row) {
-                    $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres + "</option>");
-                });
-            },
-            error: function (error) {
-            }
-        });
-    }
-
     function Imprimir() {
         var location = GetPathServer();
         var win = window.open(location + "/Reportes/FacturacionReportes/FAC_009?IdEmpresa=" +@Core.Erp.Web.Helps.SessionFixed.IdEmpresa +"&IdSucursal=" +@Model.IdSucursal +"&IdBodega=" +@Model.IdBodega +"&IdGuiaRemision=" +@Model.IdGuiaRemision, '_blank');
@@ -677,6 +674,33 @@
             error: function (error) {
             }
         });
+    }
+
+    function cargar_contactos() {
+        var codigo = IdCliente.GetValue();
+
+        if (codigo > 0) 
+        {
+            var datos = {
+                IdCliente: codigo
+            }
+            $.ajax({
+                type: 'POST',
+                data: JSON.stringify(datos),
+                url: '@Url.Action("cargar_contactos", "GuiaRemision",new { Area = "Facturacion"})',
+                async: false,
+                dataType: 'json',
+                contentType: 'application/json; charset=utf-8',
+                success: function (data) {
+                    $("#DatosCliente").val(data);
+                },
+                error: function (error) {
+                }
+            });
+        }
+        else{
+            $("#DatosCliente").val("");
+        }
     }
 </script>
 
