--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
@@ -24,7 +24,7 @@
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 20);
 
         settings.Properties.FilterMinLength = 3;
-        //settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "SetPrecioProducto";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demandaProducto,
     new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demandaProducto).Bind((Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_factura_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Facturacion.fa_factura_det_Info>)) ? "" : (Model == 0 ? "" : Model));
