--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbProducto_Guia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_CmbProducto_Guia.cshtml
@@ -22,7 +22,7 @@
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
         settings.Properties.FilterMinLength = 3;
-        settings.Properties.ClientSideEvents.SelectedIndexChanged = "GetInfoProducto";
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "SetPrecioProducto";
 
     })
      .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_list_bajo_demandaProducto, new Core.Erp.Web.Areas.Facturacion.Controllers.GuiaRemisionController().get_info_bajo_demandaProducto)
