--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
@@ -209,8 +209,8 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_notaCredito_det.GetEditor('sc_Precio').SetValue(data.precio_1);
-                GridView_notaCredito_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
+                GridView_notaCredito_det.GetEditor('sc_Precio').SetValue(data.precio);
+                GridView_notaCredito_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCodImpuesto);
             },
             error: function (error) {
             }
